--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,15 +4,9 @@
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
 
-    <servlet>
-    <servlet-name>Welcome</servlet-name>
-    <jsp-file>/WEB-INF/index.jsp</jsp-file>
-    </servlet>
-
-    <servlet-mapping>
-    <servlet-name>Welcome</servlet-name>
-    <url-pattern>/</url-pattern>
-    </servlet-mapping>
+    <welcome-file-list>
+        <welcome-file>/pages/sign-up/registerPage.jsp</welcome-file>
+    </welcome-file-list>
 
 
 </web-app>
