--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,6 +3,12 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
+    <jsp-config>
+        <jsp-property-group>
+            <url-pattern>*.jsp</url-pattern>
+            <page-encoding>UTF-8</page-encoding>
+        </jsp-property-group>
+    </jsp-config>
 
     <servlet>
         <servlet-name>Welcome</servlet-name>
@@ -11,7 +17,7 @@
 
     <servlet-mapping>
         <servlet-name>Welcome</servlet-name>
-        <url-pattern>/search</url-pattern>
+        <url-pattern>/search/*</url-pattern>
     </servlet-mapping>
 
     <welcome-file-list>
