--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -21,7 +21,7 @@
     </servlet-mapping>
 
     <welcome-file-list>
-        <welcome-file>/pages/SignIn.jsp</welcome-file>
+        <welcome-file>/pages/signIn.jsp</welcome-file>
     </welcome-file-list>
 
 </web-app>
